# PolymarketAIAgent

./: README.md  pyproject.toml  requirements.txt
data/: openrouter_2025-04-01.csv  openrouter_2025-04-02.csv  openrouter_2025-04-03.csv  openrouter_2025-04-04.csv  openrouter_2025-04-05.csv  openrouter_2025-04-06.csv  openrouter_2025-04-07.csv  openrouter_2025-04-08.csv  openrouter_2025-04-09.csv  openrouter_2025-04-10.csv  openrouter_2025-04-11.csv  openrouter_2025-04-12.csv  openrouter_2025-04-13.csv  openrouter_2025-04-14.csv  openrouter_2025-04-15.csv  openrouter_2025-04-16.csv  openrouter_2025-04-17.csv  openrouter_2025-04-18.csv  openrouter_2025-04-19.csv  openrouter_2025-04-20.csv  openrouter_2025-04-21.csv  openrouter_2025-04-22.csv  openrouter_2025-04-23.csv  openrouter_2025-04-24.csv  openrouter_2025-04-25.csv
notebooks/: 2025-04-26 13:48:26.csv  2025-04-26 13:54:26.csv  BTC_22.csv  Benchmark.ipynb  Benchmark_swarm.ipynb  Data.ipynb  Langchain.ipynb  PolymarketAPI.ipynb  analyze_swarm_data.ipynb  btc.csv  fear_greed_index.ipynb  feature_engineering.ipynb  openai_client.ipynb  openrouter_integration.ipynb
polymarket_agent/: app.py  data.py  get_data.py  one_shot_agent.py  utils.py
