[project]
name = "polymarketaiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2025.1.31",
    "cfgv==3.4.0",
    "charset-normalizer==3.4.1",
    "distlib==0.3.9",
    "filelock==3.18.0",
    "identify==2.6.9",
    "idna==3.10",
    "ipykernel>=6.29.5",
    "ipython>=9.1.0",
    "matplotlib>=3.10.1",
    "nodeenv==1.9.1",
    "numpy==2.2.4",
    "openai>=1.75.0",
    "pandas==2.2.3",
    "platformdirs==4.3.7",
    "pre-commit==4.2.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "setuptools==75.8.0",
    "six==1.17.0",
    "ta>=0.11.0",
    "tabulate>=0.9.0",
    "tiktoken>=0.9.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "virtualenv==20.30.0",
    "wheel==0.45.1",
]
